--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/care-circle/care-circle~body-area.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/care-circle/care-circle~body-area.yml
@@ -5,7 +5,7 @@ items:
   - icon: ../../images/icons/th-bill.svg
     icon_alt: alt text
     url: "#"
-    label: Find a Provider
+    label: Find a Doctor
   - icon: ../../images/icons/th-cal.svg
     icon_alt: alt text
     url: "#"
@@ -19,7 +19,7 @@ items:
   - icon: ../../images/icons/th-find-hospital.svg
     icon_alt: alt text
     url: "#"
-    label: Follow-up with Provider
+    label: Follow-up with Doctor
     color: wisdom
   - icon: ../../images/icons/th-find-provider.svg
     icon_alt: alt text
