--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.yml
@@ -7,7 +7,7 @@ img:
   alt: "Alternative Text"
 classes: "growth top-left"
 autocomplete:
-  label: Find a Provider
+  label: Find a Doctor
   input_class:
   type: find-provider
   placeholder: Search by Name, Specialty, or Condition
@@ -18,7 +18,7 @@ autocomplete:
       children:
         - id: 11
           name: Conjunctivitis
-    - label: Providers
+    - label: Doctors
       children:
         - id: 12
           name: Monica Chung Kwan-consigli, Pa-c
