--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser--small/location-teaser--small.yml
@@ -10,4 +10,4 @@ phones:
     number: "484-555-5556"
 cta:
   url: "#"
-  label: "Other Providers at this Location"
+  label: "Other Doctors at this Location"
