--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.yml
@@ -111,7 +111,7 @@ section_items:
   - title: "Events & Classes"
     url: "/"
 cta_list:
-  - text: "Providers at this Location"
+  - text: "Doctors at this Location"
     url: "/"
     icon: "th-find-provider.svg"
 boxes:
