--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/listing-search.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/listing-search.yml
@@ -1,3 +1,3 @@
-label: "Search Providers"
+label: "Search Doctors"
 placeholder: "Search by Name, Specialty, or Condition"
-button: "Search Providers"
+button: "Search Doctors"
