update search page

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/search/search.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/search/search.yml
@@ -21,7 +21,7 @@ form_sections:
         children:
           - title: Location
             id: type
-          - title: Provider
+          - title: Doctor
             id: type
           - title: Service
             id: type
