--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/search/search.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/search/search.yml
@@ -50,13 +50,14 @@ teasers:
     details:
       name: "Donald E. Roland, MD, DMD"
       specialties: 
-        - "Oral and Maxillofacial Surgery"
+        - text: "Oral and Maxillofacial Surgery"
       focus: 
-        - "Cranio-facial clefts, Rhinoplasty, Genioplasty"
+        - text: "Cranio-facial clefts, Rhinoplasty, Genioplasty"
       location: "Pottstown, PA"
       language: 
-        - "English"
+        - text: "English"
       rating: '4.2'
+      rating_icon: "star.svg"
     type: "provider"
   - details:
       title: "Lessons from the Oncology Center"
@@ -119,13 +120,14 @@ teasers:
     details:
       name: "Amir A. Abdel-Wahab, MD, FAAP"
       specialties: 
-        - "Pediatrics"
+        - text: "Pediatrics"
       focus: 
-        - "Child Development, Preventative Medicine"
+        - text: "Child Development, Preventative Medicine"
       location: "Wyomissing, PA"
       language: 
-        - "English"
+        - text: "English"
       rating: '5'
+      rating_icon: "star.svg"
     type: "provider"
   - img:
       src: "../../images/people/Roland-Donald.jpg"
@@ -138,13 +140,14 @@ teasers:
     details:
       name: "Donald E. Roland, MD, DMD"
       specialties: 
-        - "Oral and Maxillofacial Surgery"
+        - text: "Oral and Maxillofacial Surgery"
       focus: 
-        - "Cranio-facial clefts, Rhinoplasty, Genioplasty"
+        - text: "Cranio-facial clefts, Rhinoplasty, Genioplasty"
       location: "Pottstown, PA"
       language: 
-        - "English"
+        - text: "English"
       rating: '4.2'
+      rating_icon: "star.svg"
     type: "provider"
   - details:
       title: "Lessons from the Oncology Center"
