--- a/config/sites/default/core.entity_view_display.node.service.components.yml
+++ b/config/sites/default/core.entity_view_display.node.service.components.yml
@@ -7,12 +7,13 @@ dependencies:
     - field.field.node.service.field_body
     - field.field.node.service.field_conditions_ref
     - field.field.node.service.field_metatags
+    - field.field.node.service.field_service_card_cta
+    - field.field.node.service.field_service_card_desc
+    - field.field.node.service.field_service_card_image
     - field.field.node.service.field_service_core_bool
     - field.field.node.service.field_service_core_ref
     - field.field.node.service.field_service_flex
     - field.field.node.service.field_service_header
-    - field.field.node.service.field_service_headline
-    - field.field.node.service.field_service_intro
     - field.field.node.service.field_service_related_ref
     - node.type.service
   module:
@@ -37,11 +38,12 @@ hidden:
   field_body: true
   field_conditions_ref: true
   field_metatags: true
+  field_service_card_cta: true
+  field_service_card_desc: true
+  field_service_card_image: true
   field_service_core_bool: true
   field_service_core_ref: true
   field_service_header: true
-  field_service_headline: true
-  field_service_intro: true
   field_service_related_ref: true
   links: true
   search_api_excerpt: true
