--- a/config/sites/default/core.entity_view_display.node.service.image_box_reference.yml
+++ b/config/sites/default/core.entity_view_display.node.service.image_box_reference.yml
@@ -13,8 +13,7 @@ dependencies:
     - field.field.node.service.field_service_core_bool
     - field.field.node.service.field_service_core_ref
     - field.field.node.service.field_service_flex
-    - field.field.node.service.field_service_headline
-    - field.field.node.service.field_service_intro
+    - field.field.node.service.field_service_header
     - field.field.node.service.field_service_related_ref
     - node.type.service
   module:
@@ -59,8 +58,7 @@ hidden:
   field_service_core_bool: true
   field_service_core_ref: true
   field_service_flex: true
-  field_service_headline: true
-  field_service_intro: true
+  field_service_header: true
   field_service_related_ref: true
   links: true
   search_api_excerpt: true
