--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-header/provider-header.yml
@@ -1,5 +1,6 @@
 name: "Karen A. Hoerst, MD"
 lead_title: "Medical Director, Stroke Program"
+type: 'Doctor'
 rating: 4.9
 review_amt: 36
 provider_video: "https://www.youtube.com/embed/d3ZLhedUtkA"
