add help text for reference image box

--- a/config/sites/default/field.field.paragraph.image_box_link_reference.field_box_link_ref.yml
+++ b/config/sites/default/field.field.paragraph.image_box_link_reference.field_box_link_ref.yml
@@ -12,7 +12,7 @@ field_name: field_box_link_ref
 entity_type: paragraph
 bundle: image_box_link_reference
 label: Reference
-description: ''
+description: 'Select an existing service or location page to reference'
 required: false
 translatable: false
 default_value: {  }
