--- a/config/sites/default/field.field.paragraph.image_teaser_banner.field_image_banner_image_ref.yml
+++ b/config/sites/default/field.field.paragraph.image_teaser_banner.field_image_banner_image_ref.yml
@@ -11,7 +11,7 @@ field_name: field_image_banner_image_ref
 entity_type: paragraph
 bundle: image_teaser_banner
 label: Image
-description: ''
+description: 'Images with landscape orientation display best in this component'
 required: false
 translatable: false
 default_value: {  }
