set text teaser banner button as required

--- a/config/sites/default/field.field.paragraph.text_teaser_banner.field_text_teaser_link.yml
+++ b/config/sites/default/field.field.paragraph.text_teaser_banner.field_text_teaser_link.yml
@@ -13,7 +13,7 @@ entity_type: paragraph
 bundle: text_teaser_banner
 label: Link
 description: ''
-required: false
+required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
