--- a/config/sites/default/field.field.node.location.field_location_components.yml
+++ b/config/sites/default/field.field.node.location.field_location_components.yml
@@ -5,9 +5,14 @@ dependencies:
   config:
     - field.storage.node.field_location_components
     - node.type.location
+    - paragraphs.paragraphs_type.anchored_cta_block
     - paragraphs.paragraphs_type.box_links
+    - paragraphs.paragraphs_type.cards
+    - paragraphs.paragraphs_type.cta_banner
+    - paragraphs.paragraphs_type.file_download_cta
     - paragraphs.paragraphs_type.image_teaser_banner
     - paragraphs.paragraphs_type.on_my_way
+    - paragraphs.paragraphs_type.recognition_cards
     - paragraphs.paragraphs_type.text_teaser_banner
   module:
     - entity_reference_revisions
@@ -27,8 +32,13 @@ settings:
     negate: 0
     target_bundles:
       on_my_way: on_my_way
+      cards: cards
+      cta_banner: cta_banner
       box_links: box_links
+      anchored_cta_block: anchored_cta_block
       image_teaser_banner: image_teaser_banner
+      recognition_cards: recognition_cards
+      file_download_cta: file_download_cta
       text_teaser_banner: text_teaser_banner
     target_bundles_drag_drop:
       education:
@@ -50,11 +60,11 @@ settings:
         weight: 20
         enabled: false
       cards:
+        enabled: true
         weight: 21
-        enabled: false
       cta_banner:
+        enabled: true
         weight: 22
-        enabled: false
       box_links:
         enabled: true
         weight: 23
@@ -64,6 +74,9 @@ settings:
       header_cta:
         weight: 25
         enabled: false
+      anchored_cta_block:
+        enabled: true
+        weight: 26
       homepage_hero:
         weight: 26
         enabled: false
@@ -83,12 +96,24 @@ settings:
         weight: 32
         enabled: false
       recognition_cards:
+        enabled: true
         weight: 33
-        enabled: false
       rich_text:
         weight: 34
         enabled: false
+      file_download_cta:
+        enabled: true
+        weight: 35
       text_teaser_banner:
         enabled: true
         weight: 36
+      image_box_link_reference:
+        weight: 40
+        enabled: false
+      sidebar_card:
+        weight: 48
+        enabled: false
+      video_card:
+        weight: 50
+        enabled: false
 field_type: entity_reference_revisions
