Remove double components.

--- a/config/sites/default/block.block.full_width_components.yml
+++ b/config/sites/default/block.block.full_width_components.yml
@@ -26,6 +26,7 @@ visibility:
     bundles:
       location: location
       page: page
+      service: service
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
