--- a/config/sites/default/block.block.providerproximityfilter.yml
+++ b/config/sites/default/block.block.providerproximityfilter.yml
@@ -21,6 +21,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/providers\r\n/providers*"
+    pages: /providers
     negate: false
     context_mapping: {  }
