wip breadcrumb setup

--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -24,6 +24,7 @@ module:
   dblog: 0
   default_content: 0
   dynamic_page_cache: 0
+  easy_breadcrumb: 0
   editor: 0
   embed: 0
   entity_browser: 0
@@ -54,6 +55,7 @@ module:
   media_entity_browser_media_library: 0
   media_library: 0
   menu_block: 0
+  menu_breadcrumb: 0
   menu_item_extras: 0
   menu_ui: 0
   metatag: 0
