--- a/config/sites/default/views.view.find_a_service.yml
+++ b/config/sites/default/views.view.find_a_service.yml
@@ -282,7 +282,7 @@ display:
           expose:
             label: ''
           plugin_id: search_api
-      title: Search
+      title: 'Find a Service'
       header: {  }
       footer: {  }
       empty: {  }
