--- a/config/sites/default/block.block.servicesheroblock.yml
+++ b/config/sites/default/block.block.servicesheroblock.yml
@@ -21,6 +21,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/find-a-service\r\n/find-a-service*"
+    pages: /services
     negate: false
     context_mapping: {  }
