add synonym to search

--- a/config/sites/default/views.view.find_a_service.yml
+++ b/config/sites/default/views.view.find_a_service.yml
@@ -182,6 +182,7 @@ display:
           min_length: null
           fields:
             - provider_specialties_condition_name
+            - provider_specialties_condition_synonym
             - rendered_item
             - title
           plugin_id: search_api_fulltext
