--- a/config/sites/default/core.entity_form_display.node.location.default.yml
+++ b/config/sites/default/core.entity_form_display.node.location.default.yml
@@ -39,8 +39,6 @@ third_party_settings:
         - group_migrated_data
         - group_service_content
         - group_flexible_components
-        - group_how_to_find_us
-        - group_insurance
         - group_card_data
       parent_name: ''
       weight: 0
@@ -167,10 +165,10 @@ content:
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
+      edit_mode: closed
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: _none
     third_party_settings: {  }
     region: content
   field_location_card_cta:
