--- a/config/sites/default/core.entity_form_display.node.service.default.yml
+++ b/config/sites/default/core.entity_form_display.node.service.default.yml
@@ -189,10 +189,10 @@ content:
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
+      edit_mode: closed
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: _none
     region: content
     third_party_settings: {  }
   field_service_card_cta:
@@ -241,10 +241,10 @@ content:
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
+      edit_mode: closed
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: _none
     third_party_settings: {  }
   field_service_header:
     type: entity_reference_paragraphs
