--- a/config/sites/default/search_api.index.acquia_search_index.yml
+++ b/config/sites/default/search_api.index.acquia_search_index.yml
@@ -3,25 +3,25 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_location_geo
     - field.storage.node.field_services_ref
     - field.storage.node.field_conditions_ref
     - field.storage.taxonomy_term.field_condition_synonym
-    - field.storage.node.field_location_type
     - field.storage.node.field_profile_gender
     - field.storage.node.field_insurance_ref
     - field.storage.taxonomy_term.field_insurance_company
-    - field.storage.node.field_location_ref
     - field.storage.node.field_profile_languages
-    - field.storage.node.field_profile_type
+    - field.storage.node.field_location_geo
+    - field.storage.node.field_location_type
+    - field.storage.node.field_location_ref
     - field.storage.node.field_medical_specialties_ref
     - field.storage.taxonomy_term.field_related_conditions_ref
+    - field.storage.node.field_profile_type
     - search_api.server.local_development
     - core.entity_view_mode.node.search_index
   module:
-    - search_api_location
     - node
     - taxonomy
+    - search_api_location
     - search_api_solr
     - search_api
     - towerhealth_misc
@@ -242,7 +242,7 @@ field_settings:
     property_path: service_medical_specialty_field
     type: string
   service_related_condition:
-    label: 'Related Conditions » Taxonomy term » Name'
+    label: 'Services - Related Conditions'
     datasource_id: 'entity:node'
     property_path: 'field_conditions_ref:entity:name'
     type: text
@@ -251,6 +251,17 @@ field_settings:
         - field.storage.node.field_conditions_ref
       module:
         - taxonomy
+        - taxonomy
+  service_related_condition_synonym:
+    label: 'Services - Related Conditions - Synonym'
+    datasource_id: 'entity:node'
+    property_path: 'field_conditions_ref:entity:field_condition_synonym'
+    type: text
+    dependencies:
+      config:
+        - field.storage.node.field_conditions_ref
+        - field.storage.taxonomy_term.field_condition_synonym
+      module:
         - taxonomy
   synonym:
     label: Synonyms
@@ -328,6 +339,7 @@ processor_settings:
       - rendered_item
       - service_medical_specialty_field
       - service_related_condition
+      - service_related_condition_synonym
       - synonym
       - title
       - type
